# SynchrotronDiffraction_AnalysisProgramm

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
Installation/: requirements.txt
Software/: .pickle  test.py
Software/Core/: CoreModule.py  CoreModuleRegister.py
Software/GUI/: GUI_DummyModule.py
Software/IO/: IO_Utils.py
Software/Tasks/: AzimuthalIntegrationTask.py  PseudoVoigtTask.py  Task.py
Software/Utils/: Param.py
V1.0/: XRD Analysis Software.py  insitu20x200.azimint.json  start.py
V1.0/Core/: CoreModule.py  Queue.py  TaskQueue.py
V1.0/GUI/: GUI.py
V1.0/IO/: IO_Utils.py
V1.0/Multiprocessing/: Pool.py
V1.0/Tasks/: AxisTransformationFitTask.py  AzimuthalIntegrationTask.py  EllipticalStrainFitTask.py  PeakFittingTask.py  PseudoVoigtFitTask.py  TaskRegister.py
V1.0/Utils/: Param.py
V1.0/libarys/: AxisTransformFit.py  AzimuthalIntegrator.py  EllipticalFit.py  PseudoVoigtFit.py
input/: elabFtw.json  params_example.json  v3_insitu_00001_00001.cbf  v3_insitu_00001_00002.cbf
output/: pseudoVoigtFit.csv
src/: run.py  setup.py  start.py  test  test.csv  test.py
src/Core/: Config.py  CoreModule.py  CoreModuleRegister.py
src/GUI/: GUI.py
src/IO/: IO_Utils.py
src/Multiprocessing/: Pool.py
src/Tasks/: AxisTransformationFitTask (conflicted copy 2022-06-06 232241).py  AxisTransformationFitTask.py  AxisTransformationTask.py  AzimuthalIntegrationTask.py  PseudoVoigtFitTask.py  Task.py  TaskRegister.py  TaskRegisters.py  VoigtFitTask.py
src/Utils/: Param.py
src/libarys/: AxisTransformFit.py  AzimuthalIntegrator.py
(+12 files in other folders)
